tests/testfiles/invalid_prog_fails/17_double_mod.c
int main() {
    int x = 34, y = 4;
    int res = x % % y;

    return res;
}